feat: Revamp GitHub OAuth login interface with modern design and improved user experience
- Enhanced visual design with a new color and spacing system
- Introduced responsive design for various screen sizes
- Added dynamic background decorations and animations
- Implemented a loading state and error handling for images
- Created optimized image component for better performance
- Developed success and error state cards for OAuth result page
- Included detailed user information display after login
- Established a footer with links to privacy policy and terms of service
- Documented design improvements and performance metrics in DESIGN_IMPROVEMENTS.md

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 
 # testing
 /coverage
+/test-results/
+/playwright-report/
+/playwright/.cache/
 
 # next.js
 /.next/
@@ -19,10 +22,16 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
 *.pem
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
 # debug
 npm-debug.log*
@@ -32,6 +41,10 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
@@ -39,3 +52,47 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# performance and analysis
+/analyze/
+/bundle-analyzer/
+performance-test.js
+
+# cache directories
+.cache/
+.parcel-cache/
+.eslintcache
+.stylelintcache
+
+# temporary files
+*.tmp
+*.temp
+.tmp/
+.temp/
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# IDE and editor files
+*.sublime-project
+*.sublime-workspace
+.vscode/settings.json
+.vscode/launch.json
+.vscode/extensions.json
+.history/
+
+# deployment
+.deployment
+deploy.sh
+deploy.bat
+
+# documentation build
+/docs/build/
+/storybook-static/
+
+# local development
+.local/
+local-*
