--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
+    "@ant-design/nextjs-registry": "^1.1.0",
+    "antd": "^5.26.6",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
