特色功能：实现软件管理相关功能，包括创建、编辑和详细查看等操作。 - 新增了“软件编辑”组件，用于编辑现有的软件详情。 - 创建了“软件详情”组件，用于展示软件信息、公告以及版本历史。 - 引入了“软件新增”组件，用于添加新的软件条目。 - 开发了“软件管理”组件，用于列出和管理软件，并具备搜索和筛选功能。 - 在“软件编辑”中集成图像上传功能。 - 通过加载状态和错误处理优化用户体验，以应对 API 调用。 - 实现了软件列表的分页和筛选功能。

--- a/.gitignore
+++ b/.gitignore
@@ -93,6 +93,10 @@ deploy.bat
 /docs/build/
 /storybook-static/
 
+# exclude docs and tests folders
+/docs/
+/tests/
+
 # local development
 .local/
 local-*
